# polku

./: AHTI_EMITTER_INTEGRATION.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DDD_PLAN.md  Dockerfile  PLUGINS.md  README.md  start-polku-ahti.sh
.githooks/: pre-commit
.github/workflows/: sykli.yml
.sykli/: context.json  occurrence.json
.sykli/occurrences/: 66b08714d224a1e0.etf
.sykli/runs/: 2026-02-17T23-20-22.346263Z.json  latest.json
ci/: Cargo.toml
core/: Cargo.toml  build.rs
core/src/: emit.rs  error.rs  intern.rs  lib.rs  message.rs  metadata_keys.rs
core/src/proto/: polku.event.v1.rs
docs/: INGESTOR_ARCHITECTURE.md
examples/plugins/go/: csv_ingestor.go
examples/plugins/python/: slack_emitter.py
false-protocol/: Cargo.toml
false-protocol/src/: lib.rs
fp/: Cargo.toml
fp/examples/: false_protocol_pipeline.rs
fp/src/: correlator.rs  ingest.rs  lib.rs  middleware.rs  occurrence.rs  probe.rs
gateway/: Cargo.toml  TEST_AUDIT.md  build.rs
gateway/benches/: buffer.rs  middleware.rs  serialization.rs  stress.rs  throughput.rs
gateway/docs/: external-emitter-design.md  external-ingestor-design.md  plugin-discovery-design.md
gateway/src/: buffer.rs  buffer_lockfree.rs  buffer_tiered.rs  checkpoint.rs  config.rs  error.rs  hub.rs  intern.rs  lib.rs  main.rs  manifest.rs  message.rs  metrics.rs  metrics_server.rs  registry.rs  server.rs  shared_message.rs
gateway/src/discovery/: mod.rs  server.rs
gateway/src/emit/: endpoint.rs  external.rs  grpc.rs  mod.rs  registry.rs  stdout.rs  webhook.rs
gateway/src/emit/ahti/: mod.rs
gateway/src/emit/ahti/ahti_proto/: ahti.v1.rs  mod.rs
gateway/src/emit/resilience/: circuit_breaker.rs  config.rs  dlq.rs  failure_buffer.rs  mod.rs  retry.rs
gateway/src/hub/: buffer.rs  mod.rs  runner.rs
gateway/src/ingest/: external.rs  json.rs  mod.rs  passthrough.rs  registry.rs
gateway/src/middleware/: aggregator.rs  dedup.rs  enricher.rs  mod.rs  rate_limiter.rs  router.rs  sampler.rs  throttle.rs  token_bucket.rs  validator.rs
gateway/src/proto/: polku.event.v1.rs  polku.v1.rs
gateway/tests/: discovery_integration.rs  grpc_flow_test.rs  pipeline_integration.rs  plugin_integration.rs  resilience_integration.rs
runtime/: Cargo.toml
runtime/examples/: custom_runtime.rs  simple_pipeline.rs
runtime/src/: lib.rs  prelude.rs
test-plugins/receiver/: Cargo.toml  Dockerfile  build.rs
test-plugins/receiver/src/: main.rs
test-plugins/receiver/src/proto/: polku.v1.rs
tests/e2e/: Cargo.toml  build.rs
tests/e2e/src/: client.rs  lib.rs  setup.rs
tests/e2e/src/proto/: polku.v1.rs
tests/e2e/tests/: black_box.rs
