[package]
name = "polku-gateway"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Pluggable gRPC event gateway"

[lints]
workspace = true

[[bin]]
name = "polku-gateway"
path = "src/main.rs"

[[bin]]
name = "memory_profile"
path = "src/bin/memory_profile.rs"
required-features = ["dhat-heap"]

[dependencies]
# Core types (Emitter trait, PluginError, Event proto)
polku-core = { path = "../core" }

# gRPC
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"

# Async
tokio = { version = "1", features = ["full", "signal"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"

# Error handling
thiserror = "2"
anyhow = "1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus = "0.13"

# Zero-copy buffers
bytes = "1"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"

# HTTP (metrics endpoint)
axum = "0.8"

# Utils
parking_lot = "0.12"
crossbeam-queue = "0.3"
smallvec = "1.13"
ulid = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zstd = "0.13"

# Optional: memory profiling
dhat = { version = "0.3", optional = true }
lasso = { version = "0.7.3", features = ["multi-threaded"] }

[build-dependencies]
tonic-build = "0.12"
prost-build = "0.13"

[features]
# Empty feature for sykli CI compatibility
sykli = []
# Enable dhat heap profiling
dhat-heap = ["dhat"]
# Enable AHTI emitter (inlined to avoid cyclic dep with false-systems-plugins)
ahti = []

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "middleware"
harness = false

[[bench]]
name = "buffer"
harness = false

[[bench]]
name = "serialization"
harness = false

[[bench]]
name = "stress"
harness = false
